Include mirror-service in e2e tests
Even though the container will do effectively nothing, this at least verifies it's starting as intended.

Signed-off-by: nscuro <nscuro@protonmail.com>